# Argus

./: .containerignore  Cargo.toml  Containerfile  README.md  codecov.yml  compose.yml  podman-build.bat  podman-build.sh
.claude/: settings.local.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  coverage.yml  release.yml
src/: extractors.rs  index.rs  lib.rs  main.rs  ocrs_backend.rs  search.rs  tui.rs  types.rs  ui.rs  vision_llm_backend.rs
tests/: cli.rs  search_integration.rs
