[package]
name = "argus"
version = "1.0.0"
edition = "2021"
rust-version = "1.82"
authors = ["Argus Contributors"]
description = "The all-seeing file search tool - search across any file format with OCR support"
license = "MIT"
readme = "README.md"
keywords = ["search", "cli", "pdf", "ocr", "grep"]
categories = ["command-line-utilities", "text-processing"]

[features]
default = []
# Tesseract backend (fast, native C++ via leptess).
ocr = ["dep:leptess", "dep:libc", "dep:lopdf", "dep:image", "dep:tempfile"]
# ocrs backend (pure-Rust ONNX engine via rten; higher accuracy on modern
# documents, downloads ~25 MB of models on first use).
ocrs = [
    "dep:ocrs",
    "dep:rten",
    "dep:rten-imageproc",
    "dep:ureq",
    "dep:directories",
    "dep:lopdf",
    "dep:image",
    "dep:tempfile",
]

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive", "color"] }

# File walking
walkdir = "2.4"

# Colors and terminal UI
colored = "2.1"
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }

# Interactive TUI (boxed, charm-inspired dashboard used when argus is launched
# without a pattern on a TTY).
ratatui = "0.29"
crossterm = "0.28"

# PDF extraction
pdf-extract = "0.7"

# DOCX extraction (uses zip to read the archive)
zip = "0.6"

# Tesseract OCR (optional, gated by the `ocr` feature)
leptess = { version = "0.14", optional = true }
libc = { version = "0.2", optional = true }

# ocrs ONNX backend (optional, gated by the `ocrs` feature).
# `ocrs` 0.10.0 resolves `rten` to 0.16.0 (still edition 2021, still MSRV 1.82);
# later rten/ocrs releases started requiring Rust 1.85+ via edition2024 so we
# pin both exactly to keep the `ocrs` feature buildable on MSRV.
ocrs = { version = "=0.10.0", optional = true }
rten = { version = "=0.16.0", optional = true }
rten-imageproc = { version = "=0.16.0", optional = true }
ureq = { version = "2.12", optional = true, default-features = false, features = ["tls"] }
directories = { version = "5.0", optional = true }

# PDF OCR and image preprocessing (shared by both OCR backends).
# `image`'s default features pull in `ravif`/`avif-serialize` which now
# require Rust 1.85+ via edition 2024. Select only the formats OCR actually
# encounters in screenshots and scanned PDFs so MSRV 1.82 still builds.
lopdf = { version = "0.34", optional = true }
image = { version = "0.25", default-features = false, optional = true, features = [
    "png",
    "jpeg",
    "tiff",
    "bmp",
    "gif",
    "webp",
] }
tempfile = { version = "3.24", optional = true }

# File opening
opener = "0.6"

# Regex support
regex = "1.10"

# Serialization (for index files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"

# Parallel processing
rayon = "1.8"

# Encoding detection
encoding_rs = "0.8"
encoding_rs_io = "0.1"

# MIME type detection
infer = "0.15"

[dev-dependencies]
tempfile = "3.24"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
uninlined_format_args = "warn"
needless_return = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
map_unwrap_or = "warn"
for_kv_map = "warn"
missing_const_for_thread_local = "warn"
redundant_closure = "warn"
match_same_arms = "warn"
items_after_statements = "warn"
